--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=api-gateway
-server.port=8084
+server.port=${PORT:8080}
 jwt.secret=MySuperSecretKey_MustBeAtLeast32Chars!!
 jwt.expiration=86400000
 spring.main.web-application-type=reactive
@@ -9,20 +9,19 @@ spring.cloud.gateway.httpclient.wiretap=true
 spring.cloud.gateway.server.webflux.httpserver.wiretap=true
 spring.cloud.gateway.server.webflux.httpclient.wiretap=true
 springdoc.swagger-ui.path=/swagger-ui/index.html
-springdoc.swagger-ui.urls[0].name=Auth
-springdoc.swagger-ui.urls[0].url=/api/auth/v3/api-docs
-springdoc.swagger-ui.urls[1].name=Booking
-springdoc.swagger-ui.urls[1].url=/api/booking/v3/api-docs
-springdoc.swagger-ui.urls[2].name=Inventory
-springdoc.swagger-ui.urls[2].url=/api/inventory/v3/api-docs
-springdoc.swagger-ui.urls[3].name=Notification
-springdoc.swagger-ui.urls[3].url=/api/notification/v3/api-docs
-springdoc.swagger-ui.urls[4].name=Payment
-springdoc.swagger-ui.urls[4].url=/api/payment/v3/api-docs
-springdoc.swagger-ui.urls[5].name=Showtime
-springdoc.swagger-ui.urls[5].url=/api/showtime/v3/api-docs
-springdoc.swagger-ui.urls[6].name=Ticket
-springdoc.swagger-ui.urls[6].url=/api/ticket/v3/api-docs
 springdoc.swagger-ui.disable-swagger-default-url=true
-springdoc.api-docs.enabled=false
-
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.urls[0].name=Auth
+springdoc.swagger-ui.urls[0].url=/v3/api-docs/auth
+springdoc.swagger-ui.urls[1].name=Booking
+springdoc.swagger-ui.urls[1].url=/v3/api-docs/booking
+springdoc.swagger-ui.urls[2].name=Inventory
+springdoc.swagger-ui.urls[2].url=/v3/api-docs/inventory
+springdoc.swagger-ui.urls[3].name=Notification
+springdoc.swagger-ui.urls[3].url=/v3/api-docs/notification
+springdoc.swagger-ui.urls[4].name=Payment
+springdoc.swagger-ui.urls[4].url=/v3/api-docs/payment
+springdoc.swagger-ui.urls[5].name=Showtime
+springdoc.swagger-ui.urls[5].url=/v3/api-docs/showtime
+springdoc.swagger-ui.urls[6].name=Ticket
+springdoc.swagger-ui.urls[6].url=/v3/api-docs/ticket
