--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=auth-service 
-server.port=8085
-spring.datasource.username=postgres
-spring.datasource.password=12345
-spring.datasource.url=jdbc:postgresql://postgres:5432/authdb
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+server.port=${PORT:8080}
+# Postgres Railway env-dən gələcək:
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.data.redis.host=redis
-spring.data.redis.port=6379
-jwt.secret=MySuperSecretKey_MustBeAtLeast32Chars!!   
+spring.data.redis.url=${REDIS_URL}
+jwt.secret=MySuperSecretKey_MustBeAtLeast32Chars!!
 jwt.expiration=86400000
 springdoc.swagger-ui.path=/swagger-ui/index.html
 springdoc.use-root-path=true
