Update JwtAuthGlobalFilterConfig to allow actuator, swagger and auth without JWT

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -20,5 +20,5 @@ springdoc.swagger-ui.urls[6].name=Ticket
 springdoc.swagger-ui.urls[6].url=/api/ticket/v3/api-docs
 logging.level.org.springframework.cloud.gateway=INFO
 logging.level.reactor.netty=INFO
-management.endpoints.web.exposure.include=health
-
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.probes.enabled=true
