--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,11 +1,11 @@
+
 FROM maven:3.9.9-eclipse-temurin-17 AS build
 WORKDIR /app
 COPY pom.xml .
-RUN mvn -q -DskipTests dependency:go-offline
 COPY src ./src
-RUN mvn -q -DskipTests clean package spring-boot:repackage
+RUN mvn -q -DskipTests clean package
 FROM eclipse-temurin:17-jre
 WORKDIR /app
 COPY --from=build /app/target/app.jar /app/app.jar
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","/app/app.jar"]
+CMD ["sh","-c","java -Xms256m -Xmx512m -jar /app/app.jar --server.port=${PORT}"]
