--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,15 +1,14 @@
-spring.application.name=auth-service 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.application.name=auth-service
 server.port=${PORT:8080}
-# Postgres Railway env-dən gələcək:
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.data.redis.url=${REDIS_URL}
-jwt.secret=MySuperSecretKey_MustBeAtLeast32Chars!!
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.data.redis.url=${SPRING_DATA_REDIS_URL}
+jwt.secret=${JWT_SECRET}
 jwt.expiration=86400000
 springdoc.swagger-ui.path=/swagger-ui/index.html
 springdoc.use-root-path=true
