chore: configs update + swagger fix

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,9 +1,20 @@
+spring.application.name=api-gateway
+server.port=8084
+spring.main.web-application-type=reactive
 
-server.port=${PORT:8080}
-springdoc.swagger-ui.path=/swagger-ui/index.html
-springdoc.swagger-ui.disable-swagger-default-url=true
-springdoc.use-root-path=true
+jwt.secret=${JWT_SECRET:MySuperSecretKey_MustBeAtLeast32Chars!!}
+jwt.expiration=86400000
+
+logging.level.org.springframework.cloud.gateway=INFO
+logging.level.reactor.netty=INFO
+spring.cloud.gateway.server.webflux.httpserver.wiretap=true
+spring.cloud.gateway.server.webflux.httpclient.wiretap=true
+
+
+springdoc.swagger-ui.enabled=true
 springdoc.api-docs.enabled=true
+springdoc.swagger-ui.path=/swagger-ui/index.html
+springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.urls[0].name=Auth
 springdoc.swagger-ui.urls[0].url=/api/auth/v3/api-docs
 springdoc.swagger-ui.urls[1].name=Booking
@@ -18,8 +29,82 @@ springdoc.swagger-ui.urls[5].name=Showtime
 springdoc.swagger-ui.urls[5].url=/api/showtime/v3/api-docs
 springdoc.swagger-ui.urls[6].name=Ticket
 springdoc.swagger-ui.urls[6].url=/api/ticket/v3/api-docs
-logging.level.org.springframework.cloud.gateway=INFO
-logging.level.reactor.netty=INFO
-management.endpoints.web.exposure.include=health,info
-management.endpoint.health.probes.enabled=true
 
+
+spring.cloud.gateway.routes[0].id=auth
+spring.cloud.gateway.routes[0].uri=http://auth-service:8085
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/auth/**
+
+spring.cloud.gateway.routes[1].id=booking
+spring.cloud.gateway.routes[1].uri=http://booking-service:8087
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/booking/**
+
+spring.cloud.gateway.routes[2].id=inventory
+spring.cloud.gateway.routes[2].uri=http://inventory-service:8081
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/inventory/**
+
+spring.cloud.gateway.routes[3].id=notification
+spring.cloud.gateway.routes[3].uri=http://notification-service:8083
+spring.cloud.gateway.routes[3].predicates[0]=Path=/api/notification/**
+
+spring.cloud.gateway.routes[4].id=payment
+spring.cloud.gateway.routes[4].uri=http://payment-service:8082
+spring.cloud.gateway.routes[4].predicates[0]=Path=/api/payment/**
+
+spring.cloud.gateway.routes[5].id=showtime
+spring.cloud.gateway.routes[5].uri=http://showtime-service:8086
+spring.cloud.gateway.routes[5].predicates[0]=Path=/api/showtime/**
+
+spring.cloud.gateway.routes[6].id=ticket
+spring.cloud.gateway.routes[6].uri=http://ticket-service:8088
+spring.cloud.gateway.routes[6].predicates[0]=Path=/api/ticket/**
+
+
+spring.cloud.gateway.routes[7].id=auth-swagger
+spring.cloud.gateway.routes[7].uri=http://auth-service:8085
+spring.cloud.gateway.routes[7].predicates[0]=Path=/api/auth/swagger-ui/**,/api/auth/v3/api-docs/**
+spring.cloud.gateway.routes[7].filters[0]=StripPrefix=2
+spring.cloud.gateway.routes[7].filters[1]=AddRequestHeader=X-Forwarded-Prefix,/api/auth
+spring.cloud.gateway.routes[7].order=-10
+
+spring.cloud.gateway.routes[8].id=booking-swagger
+spring.cloud.gateway.routes[8].uri=http://booking-service:8087
+spring.cloud.gateway.routes[8].predicates[0]=Path=/api/booking/swagger-ui/**,/api/booking/v3/api-docs/**
+spring.cloud.gateway.routes[8].filters[0]=StripPrefix=2
+spring.cloud.gateway.routes[8].filters[1]=AddRequestHeader=X-Forwarded-Prefix,/api/booking
+spring.cloud.gateway.routes[8].order=-10
+
+spring.cloud.gateway.routes[9].id=inventory-swagger
+spring.cloud.gateway.routes[9].uri=http://inventory-service:8081
+spring.cloud.gateway.routes[9].predicates[0]=Path=/api/inventory/swagger-ui/**,/api/inventory/v3/api-docs/**
+spring.cloud.gateway.routes[9].filters[0]=StripPrefix=2
+spring.cloud.gateway.routes[9].filters[1]=AddRequestHeader=X-Forwarded-Prefix,/api/inventory
+spring.cloud.gateway.routes[9].order=-10
+
+spring.cloud.gateway.routes[10].id=ticket-swagger
+spring.cloud.gateway.routes[10].uri=http://ticket-service:8088
+spring.cloud.gateway.routes[10].predicates[0]=Path=/api/ticket/swagger-ui/**,/api/ticket/v3/api-docs/**
+spring.cloud.gateway.routes[10].filters[0]=StripPrefix=2
+spring.cloud.gateway.routes[10].filters[1]=AddRequestHeader=X-Forwarded-Prefix,/api/ticket
+spring.cloud.gateway.routes[10].order=-10
+
+spring.cloud.gateway.routes[11].id=payment-swagger
+spring.cloud.gateway.routes[11].uri=http://payment-service:8082
+spring.cloud.gateway.routes[11].predicates[0]=Path=/api/payment/swagger-ui/**,/api/payment/v3/api-docs/**
+spring.cloud.gateway.routes[11].filters[0]=StripPrefix=2
+spring.cloud.gateway.routes[11].filters[1]=AddRequestHeader=X-Forwarded-Prefix,/api/payment
+spring.cloud.gateway.routes[11].order=-10
+
+spring.cloud.gateway.routes[12].id=showtime-swagger
+spring.cloud.gateway.routes[12].uri=http://showtime-service:8086
+spring.cloud.gateway.routes[12].predicates[0]=Path=/api/showtime/swagger-ui/**,/api/showtime/v3/api-docs/**
+spring.cloud.gateway.routes[12].filters[0]=StripPrefix=2
+spring.cloud.gateway.routes[12].filters[1]=AddRequestHeader=X-Forwarded-Prefix,/api/showtime
+spring.cloud.gateway.routes[12].order=-10
+
+spring.cloud.gateway.routes[13].id=notification-swagger
+spring.cloud.gateway.routes[13].uri=http://notification-service:8083
+spring.cloud.gateway.routes[13].predicates[0]=Path=/api/notification/swagger-ui/**,/api/notification/v3/api-docs/**
+spring.cloud.gateway.routes[13].filters[0]=StripPrefix=2
+spring.cloud.gateway.routes[13].filters[1]=AddRequestHeader=X-Forwarded-Prefix,/api/notification
+spring.cloud.gateway.routes[13].order=-10
