--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,16 @@ services:
       timeout: 3s
       retries: 20
 
+  redis:
+    image: redis:7.4-alpine
+    container_name: redis
+    command: ["redis-server", "--appendonly", "yes"]
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 20
+
   rabbitmq:
     image: rabbitmq:3.13-management
     container_name: rabbitmq
@@ -29,6 +39,38 @@ services:
       interval: 5s
       timeout: 3s
       retries: 20
+
+  kafka:
+    image: bitnami/kafka:3.7
+    container_name: kafka
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_CFG_NODE_ID: 1
+      KAFKA_CFG_PROCESS_ROLES: broker,controller
+      KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: 1@kafka:9093
+      KAFKA_CFG_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093
+      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_CFG_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_CFG_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE: "true"
+    healthcheck:
+      test: ["CMD-SHELL", "kafka-topics.sh --bootstrap-server localhost:9092 --list >/dev/null 2>&1 || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 20
+
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    container_name: kafka-ui
+    ports:
+      - "9088:8080"
+    environment:
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
+    depends_on:
+      kafka:
+        condition: service_healthy
 
   api-gateway:
     build: ./api-gateway
@@ -55,10 +97,14 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/authdb
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: 12345
+      SPRING_DATA_REDIS_HOST: redis
+      SPRING_DATA_REDIS_PORT: 6379
       JWT_SECRET: ${JWT_SECRET:-MySuperSecretKey_MustBeAtLeast32Chars!!}
       JWT_EXPIRATION: 86400000
     depends_on:
       postgres:
+        condition: service_healthy
+      redis:
         condition: service_healthy
 
   showtime-service:
@@ -92,6 +138,7 @@ services:
       APP_RABBIT_EXCHANGE: booking.exchange
       APP_RABBIT_QUEUE: notification.queue
       APP_RABBIT_ROUTING: booking.created
+      KAFKA_BOOTSTRAP_SERVERS: kafka:9092
     depends_on:
       postgres:
         condition: service_healthy
@@ -101,6 +148,8 @@ services:
         condition: service_started
       auth-service:
         condition: service_started
+      kafka:
+        condition: service_healthy
 
   ticket-service:
     build: ./ticket-service
@@ -134,7 +183,7 @@ services:
     environment:
       SPRING_MAIL_HOST: smtp.gmail.com
       SPRING_MAIL_PORT: 587
-      SPRING_MAIL_USERNAME: ""
+      SPRING_MAIL_USERNAME: test@example.com
       SPRING_MAIL_PASSWORD: your-app-password
       SPRING_MAIL_PROPERTIES_MAIL_SMTP_AUTH: "true"
       SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE: "true"
@@ -146,8 +195,11 @@ services:
       APP_RABBIT_EXCHANGE: booking.exchange
       APP_RABBIT_QUEUE: notification.queue
       APP_RABBIT_ROUTING: booking.created
+      KAFKA_BOOTSTRAP_SERVERS: kafka:9092
     depends_on:
       rabbitmq:
+        condition: service_healthy
+      kafka:
         condition: service_healthy
 
   payment-service:
@@ -160,8 +212,9 @@ services:
       JWT_SECRET: ${JWT_SECRET:-MySuperSecretKey_MustBeAtLeast32Chars!!}
       JWT_EXPIRATION: 86400000
       CLIENTS_BOOKING_BASE_URL: http://booking-service:8087
-      CLIENTS_TICKET_BASE_URL:  http://ticket-service:8088
+      CLIENTS_TICKET_BASE_URL: http://ticket-service:8088
       CLIENTS_NOTIFICATION_BASE_URL: http://notification-service:8083
+      KAFKA_BOOTSTRAP_SERVERS: kafka:9092
     depends_on:
       postgres:
         condition: service_healthy
@@ -171,6 +224,8 @@ services:
         condition: service_started
       notification-service:
         condition: service_started
+      kafka:
+        condition: service_healthy
 
 volumes:
   pgdata:
