--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -1,17 +1,26 @@
 spring.application.name=payment-service
 server.port=8082
+
+spring.datasource.url=jdbc:postgresql://postgres:5432/paymentdb
 spring.datasource.username=postgres
 spring.datasource.password=12345
-spring.datasource.url=jdbc:postgresql://postgres:5432/paymentdb
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-jwt.secret=MySuperSecretKey_MustBeAtLeast32Chars!!  
+
+jwt.secret=MySuperSecretKey_MustBeAtLeast32Chars!!
 jwt.expiration=86400000
-clients.ticket.base-url=http://localhost:8088
-clients.notification.base-url=http://localhost:8083
-clients.booking.base-url=http://localhost:8087
+
+clients.booking.base-url=http://booking-service:8087
+clients.ticket.base-url=http://ticket-service:8088
+clients.notification.base-url=http://notification-service:8083
+
+spring.kafka.bootstrap-servers=kafka:9092
+
 springdoc.swagger-ui.path=/swagger-ui/index.html
-springdoc.use-root-path=true
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.enabled=true
 server.forward-headers-strategy=framework
+springdoc.use-root-path=true
+
