--- a/showtime-service/src/main/resources/application.properties
+++ b/showtime-service/src/main/resources/application.properties
@@ -1,14 +1,20 @@
 spring.application.name=showtime-service
 server.port=8086
+
+spring.datasource.url=jdbc:postgresql://postgres:5432/showtimedb
 spring.datasource.username=postgres
 spring.datasource.password=12345
-spring.datasource.url=jdbc:postgresql://postgres:5432/showtimedb
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-jwt.secret=MySuperSecretKey_MustBeAtLeast32Chars!!   
+
+jwt.secret=MySuperSecretKey_MustBeAtLeast32Chars!!
 jwt.expiration=86400000
+
 springdoc.swagger-ui.path=/swagger-ui/index.html
-springdoc.use-root-path=true
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.enabled=true
 server.forward-headers-strategy=framework
+springdoc.use-root-path=true
+
